--- a/jenkinsfile
+++ b/jenkinsfile
@@ -60,10 +60,14 @@ pipeline {
                 // To run Maven on a Windows agent, use
                  bat "mvn clean package"
 					        } else {
-                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'				 
+                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'
+						} catch (err) {
+							echo err.getMessage()
+							unstable(message: "${STAGE_NAME} is unstable")
+							echo "Error detected, ${env.STAGE_NAME} failed..................!"
+						}							
             }
             }
 			}
     }
-	}
 	}
