--- a/jenkinsfile
+++ b/jenkinsfile
@@ -61,7 +61,7 @@ pipeline {
                  bat "mvn clean package"
 					        } else {
                                                         echo 'skipping the stage ${env.STAGE_NAME}.............................!'
-						} catch (err) {
+					}	} catch (err) {
 							echo err.getMessage()
 							unstable(message: "${STAGE_NAME} is unstable")
 							echo "Error detected, ${env.STAGE_NAME} failed..................!"
