--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,5 +32,23 @@ pipeline {
             }
         } 
         }
+        stage('SCA') {
+            steps {
+			      script {
+						try {
+							bat '''
+							wget https://github.com/jeremylong/DependencyCheck/releases/download/v6.2.2/dependency-check-6.2.2-release.zip
+							 PowerShell Expand-Archive -Path "dependency-check-6.2.2-release.zip"  
+							./dependency-check-6.2.2-release/dependency-check/bin/dependency-check.bat --noupdate --project "TeachersFCU" --scan "Shoppingcart/lib/" --format HTML --out .
+						    '''
+						} catch (err) {
+							echo err.getMessage()
+							unstable(message: "${STAGE_NAME} is unstable")
+							echo "Error detected, ${env.STAGE_NAME} failed..................!"
+						}
+				}
+
+	    }
+        }	
 		}
 		}
