--- a/jenkinsfile
+++ b/jenkinsfile
@@ -49,6 +49,26 @@ pipeline {
 				}
 
 	    }
-        }	
+        }
+	stage('build') {
+            steps {
+				script {
+						try {
+						if (env.BUILD_GIT_URL != 'null') {
+							sh "git clone ${env.BUILD_GIT_URL} build-code"
+							sh '''
+							cd build-code
+							mvn clean package'''
+					        } else {
+                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'
+                                                        }
+					}	} catch (err) {
+							echo err.getMessage()
+							unstable(message: "${STAGE_NAME} is unstable")
+							echo "Error detected, ${env.STAGE_NAME} failed..................!"
+						}
+				}							
+            }
+	 }	
 		}
 		}
