--- a/jenkinsfile
+++ b/jenkinsfile
@@ -62,7 +62,7 @@ pipeline {
 					        } else {
                                                         echo 'skipping the stage ${env.STAGE_NAME}.............................!'
                                                         }
-					}	} catch (err) {
+						} catch (err) {
 							echo err.getMessage()
 							unstable(message: "${STAGE_NAME} is unstable")
 							echo "Error detected, ${env.STAGE_NAME} failed..................!"
