--- a/jenkinsfile
+++ b/jenkinsfile
@@ -72,7 +72,11 @@ pipeline {
             			steps {
 					script {
 						try {
-            deploy adapters: [tomcat8(credentialsId: 'f9e5d28d-6a35-4704-a1bd-6676011dd79a', path: '', url: '${env.TOMCAT_IP}')], contextPath: null, onFailure: false, war: '**/*.war'		
+							if (env.TOMCAT_IP != 'null') {					
+            deploy adapters: [tomcat8(credentialsId: 'f9e5d28d-6a35-4704-a1bd-6676011dd79a', path: '', url: '${env.TOMCAT_IP}')], contextPath: null, onFailure: false, war: '**/*.war'
+					        } else {
+                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'
+                                                        }	    
 						} catch (err) {
 							echo err.getMessage()
 							unstable(message: "${STAGE_NAME} is unstable")
@@ -81,4 +85,5 @@ pipeline {
 					}
 				}
 	}
+		}
 		}
