--- a/jenkinsfile
+++ b/jenkinsfile
@@ -69,7 +69,16 @@ pipeline {
 	 }
 	 }
 	stage('tom') {
-            steps { 
+            steps {
+						script {
+						try {
+            deploy adapters: [tomcat8(credentialsId: 'f9e5d28d-6a35-4704-a1bd-6676011dd79a', path: '', url: '${env.TOMCAT_IP}')], contextPath: null, onFailure: false, war: '**/*.war'		
+						} catch (err) {
+							echo err.getMessage()
+							unstable(message: "${STAGE_NAME} is unstable")
+							echo "Error detected, ${env.STAGE_NAME} failed..................!"
+						}		
+					}    
 	    }
 	    }
 		}
