--- a/jenkinsfile
+++ b/jenkinsfile
@@ -68,7 +68,7 @@ pipeline {
 				}							
             }
 	 }
-     stage("hi") {
+     stage("deploye") {
          steps {
 					script {
 						try {
@@ -84,5 +84,23 @@ pipeline {
 					}
 				}
 	}
+	stage('FunctionalAutomation_Web') {
+           			steps {
+		   			script {
+						try {
+						if (env.FUNCTIONAL_WEB_GIT_URL != 'null') {						
+							bat """git clone ${env.FUNCTIONAL_WEB_GIT_URL}
+							cd webtest
+							mvn test """
+					        } else {
+                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'														
+						} catch (err) {
+							echo err.getMessage()
+							unstable(message: "${STAGE_NAME} is unstable")
+							echo "Error detected, ${env.STAGE_NAME} failed..................!"
+						}					
+					}
+	 		}
+	 }	
 		}
 }
