--- a/jenkinsfile
+++ b/jenkinsfile
@@ -94,7 +94,7 @@ pipeline {
 							mvn test """
 					        } else {
                                                         echo 'skipping the stage ${env.STAGE_NAME}.............................!'														
-						} catch (err) {
+					}	} catch (err) {
 							echo err.getMessage()
 							unstable(message: "${STAGE_NAME} is unstable")
 							echo "Error detected, ${env.STAGE_NAME} failed..................!"
