--- a/jenkinsfile
+++ b/jenkinsfile
@@ -119,6 +119,22 @@ pipeline {
 							}
 					}
 				}
-	}	 
+	}
+        stage('DAST') {
+            steps {
+                script {
+                    try {
+						if (env.DAST_IP != 'null') {		    
+                       arachniScanner checks: '*', format: 'html', url: '${env.DAST_IP}:8084/SpringMVCAnnotationShoppingCart/'
+					        } else {
+                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'                       
+             }       } catch (err) {
+							echo err.getMessage()
+							unstable(message: "${STAGE_NAME} is unstable")
+							echo "Error detected, ${env.STAGE_NAME} failed..................!"                       
+                    }
+                }
+            }
+        }	
 		}
 }
