--- a/jenkinsfile
+++ b/jenkinsfile
@@ -137,25 +137,23 @@ pipeline {
                 }
             }
         }
-        stage('Performance') {
+	        stage('Performance') {
             			steps {
 		   			script {
 						try {
-						if (env.JMETER_GIT_URL != 'null') {						
-							bat '''dir
-                           git clone ${env.JMETER_GIT_URL}
+							bat """
+                            git clone ${env.JMETER_GIT_URL}
+			    dir
                             cd folder
-                            C:/Windows/System32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/dynamic-job/folder/apache-jmeter-5.4.1/apache-jmeter-5.4.1/bin/jmeter.bat -n -t OnlineShop_1.jmx -l OnlineShop_result.jtl -e -o OnlineShop_%BUILD_NUMBER%.html
-            					 '''
-					        } else {
-                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'						 
-            				}	} catch (err) {
+                            jmeter.bat -n -t C:/Windows/system32/config\\systemprofile/AppData/Local/Jenkins/.jenkins/workspace/folder/OnlineShop_1.jmx -l C:/Windows/system32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/folder/OnlineShop_result.jtl -e -o C:/Windows/system32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/folder/OnlineShop_1.html
+            					 """
+            					} catch (err) {
 							echo err.getMessage()
 							unstable(message: "${STAGE_NAME} is unstable")
 							echo "Error detected, ${env.STAGE_NAME} failed..................!"
 							}
 					}
 			}
-		}	
+		} 
 		}
 }
