--- a/jenkinsfile
+++ b/jenkinsfile
@@ -141,13 +141,16 @@ pipeline {
             			steps {
 		   			script {
 						try {
+						if (env.JMETER_GIT_URL != 'null') {						
 							bat """
                             git clone ${env.JMETER_GIT_URL}
 			    dir
                             cd folder
                             C:/Windows/System32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/dynamic-job/folder/apache-jmeter-5.4.1/apache-jmeter-5.4.1/bin/jmeter.bat -n -t OnlineShop_1.jmx -l OnlineShop_result.jtl -e -o OnlineShop_%BUILD_NUMBER%.html
             					 """
-            					} catch (err) {
+					        } else {
+                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'						 
+            			}		} catch (err) {
 							echo err.getMessage()
 							unstable(message: "${STAGE_NAME} is unstable")
 							echo "Error detected, ${env.STAGE_NAME} failed..................!"
@@ -155,5 +158,28 @@ pipeline {
 					}
 			}
 		} 
+        stage('Nexus') {
+            steps {
+ 		   			script {
+						if (env.NEXUS_IP != 'null') {               
+               bat 'tar -a -c -f web-test-report-%BUILD_NUMBER%.zip webtest/target/surefire-reports/*'
+               bat 'tar -a -c -f mobile-test-report-%BUILD_NUMBER%.zip mobiletest/target/surefire-reports/*'
+               bat 'tar -a -c -f jmeter-test-report-%BUILD_NUMBER%.zip folder/OnlineShop_%BUILD_NUMBER%.html/*'
+               bat '''mkdir test-reports
+               
+               cd test-reports
+               
+               curl -T "C:/Windows/System32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/sample2/Shoppingcart/.scannerwork/report-task.txt" -u admin:admin123 -v http://${env.NEXUS_IP}:8081/repository/maven-central-repo/sast-reports/ 
+               curl -T "C:/Windows/System32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/sample2/web-test-report-61.zip" -u admin:admin123 -v http://${env.NEXUS_IP}:8081/repository/maven-central-repo/web-test-report/ 
+               curl -T "C:/Windows/System32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/sample2/mobile-test-report-61.zip" -u admin:admin123 -v http://${env.NEXUS_IP}:8081/repository/maven-central-repo/mobile-test-report/ 
+               curl -T "C:/Windows/System32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/sample2/jmeter-test-report-61.zip" -u admin:admin123 -v http://${env.NEXUS_IP}:8081/repository/maven-central-repo/jmeter-test-report/ 
+               curl -T "C:/Windows/System32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/sample2/arachni-report-html.zip" -u admin:admin123 -v http://${env.NEXUS_IP}:8081/repository/maven-central-repo/dast-test-report/ 
+               '''
+						        } else {
+                                                        echo "skipping the stage ${env.STAGE_NAME}.............................!"       
+                           }
+        }         
+    }		
 		}
+}
 }
