--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,7 +11,8 @@ pipeline {
             steps {
                 load "parameters.groovy"
             }
-        }	
+        }
+	Parallel {
         stage('SAST Analysis') {
             steps {
                 script {
@@ -51,6 +52,7 @@ pipeline {
 
 	    }
         }
+	}
 	stage('build') {
             steps {
 				script {
