--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
         // Install the Maven version configured as "M3" and add it to the path.
         maven "M2_HOME"
     }
-    stages {""
+    stages {
             stage('load parameters') { 
             steps {
                 load "parameters.groovy"
