--- a/jenkinsfile
+++ b/jenkinsfile
@@ -189,7 +189,7 @@ pipeline {
  	post {
         // Clean after build
         always {
-		EMAIL_TO to: "${EMAIL_TO}",
+		mail to: 'nihas0505@gmail.com',
         subject: "Status of pipeline: ${currentBuild.fullDisplayName}",
         body: """${env.BUILD_URL} has result ${currentBuild.result}
         
