--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,207 +1,20 @@
-
 pipeline {
-    agent any
+    agent any 
     stages {
-        stage('load parameters') { 
-           steps {
-                load "parameters.groovy"
+        stage('Build') { 
+            steps {
+                // 
             }
         }
-        stage('SAST Analysis') {
+        stage('Test') { 
             steps {
-                script {
-                    try {
-                // Get some code from a GitHub repository
-						if (env.SAST_GIT_URL != 'null') {				
-                git "${env.SAST_GIT_URL}"
-                bat "git clone https://github.com/harishpallapu/sonarqube_scannar_windows.git"
-                bat "./sonarqube_scannar_windows/sonar-scanner-4.6.2.2472-windows/bin/sonar-scanner.bat"
-					        } else {
-                                                        echo "skipping the stage ${env.STAGE_NAME}.............................!"				
-                   } } catch (err) {
-							echo err.getMessage()
-							unstable(message: "${STAGE_NAME} is unstable")
-							echo "Error detected, ${env.STAGE_NAME} failed...............!"
-						}                
-                // Run Maven on a Unix agent.
-                //sh "mvn -Dmaven.test.failure.ignore=true clean package"
-            }
-        } 
-        }
-        stage('SCA') {
-            steps {
-			      script {
-						try {
-							bat '''
-							wget https://github.com/jeremylong/DependencyCheck/releases/download/v6.2.2/dependency-check-6.2.2-release.zip
-							 PowerShell Expand-Archive -Path "dependency-check-6.2.2-release.zip"  
-							./dependency-check-6.2.2-release/dependency-check/bin/dependency-check.bat --noupdate --project "TeachersFCU" --scan "Shoppingcart/lib/" --format HTML --out .
-						    '''
-						} catch (err) {
-							echo err.getMessage()
-							unstable(message: "${STAGE_NAME} is unstable")
-							echo "Error detected, ${env.STAGE_NAME} failed..................!"
-						}
-				}
-
-	    }
-        }
-	stage('build') {
-            steps {
-				script {
-						try {
-						if (env.BUILD_GIT_URL != 'null') {
-                git "${env.BUILD_GIT_URL}"
-							bat 'mvn clean package'
-					        } else {
-                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'
-                                                        }							
-						} catch (err) {
-							echo err.getMessage()
-							unstable(message: "${STAGE_NAME} is unstable")
-							echo "Error detected, ${env.STAGE_NAME} failed..................!"
-						}
-				}							
-            }
-	 }
-     stage("deploy") {
-         steps {
-					script {
-						try {
-						if (env.TOMCAT_IP != 'null') {						
-            deploy adapters: [tomcat8(credentialsId: 'tomcat', path: '', url: '${env.TOMCAT_IP}')], contextPath: null, onFailure: false, war: '**/*.war'
-					        } else {
-                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'	    
-					}	} catch (err) {
-							echo err.getMessage()
-							unstable(message: "${STAGE_NAME} is unstable")
-							echo "Error detected, ${env.STAGE_NAME} failed..................!"
-						}		
-					}
-				}
-	}
-	stage('FunctionalAutomation_Web') {
-           			steps {
-		   			script {
-						try {
-						if (env.FUNCTIONAL_WEB_GIT_URL != 'null') {						
-							bat """git clone ${env.FUNCTIONAL_WEB_GIT_URL}
-							cd webtest
-							mvn test """
-					        } else {
-                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'														
-					}	} catch (err) {
-							echo err.getMessage()
-							unstable(message: "${STAGE_NAME} is unstable")
-							echo "Error detected, ${env.STAGE_NAME} failed..................!"
-						}					
-					}
-	 		}
-	 }
-	stage('FunctionalAutomation_Mobile') {
-            				steps {
-		   			script {
-						try {
-						if (env.FUNCTIONAL_MOBILE_GIT_URL != 'null') {						
-							bat """ git clone ${env.FUNCTIONAL_MOBILE_GIT_URL}
-							cd mobiletest
-							mvn test """
-					        } else {
-                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'							
-					}	} catch (err) {
-							echo err.getMessage()
-							unstable(message: "${STAGE_NAME} is unstable")
-							echo "Error detected, ${env.STAGE_NAME} failed..................!"
-							}
-					}
-				}
-	}
-        stage('DAST') {
-            steps {
-                script {
-                    try {
-						if (env.DAST_IP != 'null') {		    
-                       arachniScanner checks: '*', format: 'html', url: 'http://mypublicip:8084/SpringMVCAnnotationShoppingCart/'
-					        } else {
-                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'                       
-             }       } catch (err) {
-							echo err.getMessage()
-							unstable(message: "${STAGE_NAME} is unstable")
-							echo "Error detected, ${env.STAGE_NAME} failed..................!"                       
-                    }
-                }
+                // 
             }
         }
-	        stage('Performance') {
-            			steps {
-		   			script {
-						try {
-						if (env.JMETER_GIT_URL != 'null') {						
-							bat """
-                            git clone ${env.JMETER_GIT_URL}
-			    dir
-                            cd folder
-                            C:/Windows/System32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/dynamic-job/folder/apache-jmeter-5.4.1/apache-jmeter-5.4.1/bin/jmeter.bat -n -t OnlineShop_1.jmx -l OnlineShop_result.jtl -e -o OnlineShop_%BUILD_NUMBER%.html
-            					 """
-					        } else {
-                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'						 
-            			}		} catch (err) {
-							echo err.getMessage()
-							unstable(message: "${STAGE_NAME} is unstable")
-							echo "Error detected, ${env.STAGE_NAME} failed..................!"
-							}
-					}
-			}
-		} 
-        stage('Nexus') {
+        stage('Deploy') { 
             steps {
-                
-               bat 'tar -a -c -f web-test-report-%BUILD_NUMBER%.zip webtest/target/surefire-reports/*'
-               bat 'tar -a -c -f mobile-test-report-%BUILD_NUMBER%.zip mobiletest/target/surefire-reports/*'
-               bat 'tar -a -c -f jmeter-test-report-%BUILD_NUMBER%.zip folder/OnlineShop_%BUILD_NUMBER%.html/*'
-               bat '''mkdir test-reports
-               
-               cd test-reports
-               
-               curl -T "C:/Windows/System32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/dynamic-job/Shoppingcart/.scannerwork/report-task.txt" -u admin:admin123 -v http://localhost:8081/repository/maven-central-repo/sast-reports/ 
-               curl -T "C:/Windows/System32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/dynamic-job/web-test-report-%BUILD_NUMBER%.zip" -u admin:admin123 -v http://localhost:8081/repository/maven-central-repo/web-test-report/ 
-               curl -T "C:/Windows/System32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/dynamic-job/mobile-test-report-%BUILD_NUMBER%.zip" -u admin:admin123 -v http://localhost:8081/repository/maven-central-repo/mobile-test-report/ 
-               curl -T "C:/Windows/System32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/dynamic-job/jmeter-test-report-%BUILD_NUMBER%.zip" -u admin:admin123 -v http://localhost:8081/repository/maven-central-repo/jmeter-test-report/ 
-               curl -T "C:/Windows/System32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/dynamic-job/arachni-report-html.zip" -u admin:admin123 -v http://localhost:8081/repository/maven-central-repo/dast-test-report/ 
-               '''
-                           }
-        }         
+                // 
+            }
+        }
     }
- 	post {
-        // Clean after build
-        always {
-		mail to: 'nihas0505@gmail.com',
-        subject: "Status of pipeline: ${currentBuild.fullDisplayName}",
-        body: """${env.BUILD_URL} has result ${currentBuild.result}
-        
-		Please find build reports................................!
-		
-		SAST REPORTS
-		http://localhost:8081/repository/maven-central-repo/sast-reports/report-task.txt
-		--------------------------------------------------------------------------------------------------------------------------------------
-		FUNCTIONAL AUTOMATION WEB REPORTS
-		http://localhost:8081/repository/maven-central-repo/web-test-report/web-test-report-%BUILD_NUMBER%.zip
-		----------------------------------------------------------------------------------------------------------------------------------------
-		FUNCTIONAL AUTOMATION MOBILE REPORTS
-		http://localhost:8081/repository/maven-central-repo/mobile-test-report/mobile-test-report-%BUILD_NUMBER%.zip
-		------------------------------------------------------------------------------------------------------------------------------------------
-		-----------------------------------------------------------------------------------------------------------------------------------------
-		JMETER REPORTS
-		http://localhost:8081/repository/maven-central-repo/jmeter-test-report/jmeter-test-report-%BUILD_NUMBER%.zip
-		
-		----------------------------------------------------------------------------------------------------------------------------------------
-		DAST REPORTS
-		http://localhost:8081/repository/maven-central-repo/dast-test-report/arachni-report-html-%BUILD_NUMBER%.zip
-		
-		
-		THE PIPELINE IS SUCCESSFULL AND THIS MAIL IS TO REQUEST FOR QA SIGNOFF AND PROCEED TO UAT 0R PROD ENV
-		
-		For more information please contact DEVSECOPS team...........!"""        
-        }
-    }     
 }
