--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,16 +4,19 @@ pipeline {
         stage('Build') { 
             steps {
                 // 
+                echo "hello world"
             }
         }
         stage('Test') { 
             steps {
                 // 
+                echo "hello world"
             }
         }
         stage('Deploy') { 
             steps {
                 // 
+                echo "hello world"
             }
         }
     }
