--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
         stage('LOAD PARAMETERS') { 
             steps {
                 //
-                echo "loading parameters"
+               load "parameters.groovy"
             }
         }
         stage('Test') { 
