--- a/jenkinsfile
+++ b/jenkinsfile
@@ -65,7 +65,7 @@ pipeline {
 				}							
             }
 	 }
-     stage("deploy") {
+  /*   stage("deploy") {
          steps {
 					script {
 						try {
@@ -80,8 +80,8 @@ pipeline {
 						}		
 					}
 				}
-	}
-	stage('FunctionalAutomation_Web') {
+	} */
+/*	stage('FunctionalAutomation_Web') {
            			steps {
 		   			script {
 						try {
@@ -98,8 +98,8 @@ pipeline {
 						}					
 					}
 	 		}
-	 } 
-	stage('FunctionalAutomation_Mobile') {
+	 } */
+/*	stage('FunctionalAutomation_Mobile') {
             				steps {
 		   			script {
 						try {
@@ -116,7 +116,7 @@ pipeline {
 							}
 					}
 				}
-	} 
+	} */
         stage('DAST') {
             steps {
                 script {
