--- a/jenkinsfile
+++ b/jenkinsfile
@@ -70,7 +70,7 @@ pipeline {
 					script {
 						try {
 						if (env.TOMCAT_IP != 'null') {						
-            deploy adapters: [tomcat8(credentialsId: 'tomcat', path: '', url: '${env.TOMCAT_IP}')], contextPath: null, onFailure: false, war: '**/*.war'
+            deploy adapters: [tomcat9(credentialsId: 'TOMCAT9', path: '', url: '${env.TOMCAT_IP}')], contextPath: null, war: '**/*.war'
 					        } else {
                                                         echo 'skipping the stage ${env.STAGE_NAME}.............................!'	    
 					}	} catch (err) {
