--- a/jenkinsfile
+++ b/jenkinsfile
@@ -74,7 +74,11 @@ pipeline {
 					script {
 						try {
 						if (env.TOMCAT_IP != 'null') {						
-            deploy adapters: [tomcat9(credentialsId: 'TOMCAT9', path: '', url: '${env.TOMCAT_IP}')], contextPath: null, war: '**/*.war'
+            /*deploy adapters: [tomcat9(credentialsId: 'TOMCAT9', path: '', url: '${env.TOMCAT_IP}')], contextPath: null, war: '**/*.war'
+	    					bat 'ren target\*.war java.war'
+						bat 'copy target\*.war .'
+	    					bat 'curl -T "java.war" "http://tomcat:tomcat@localhost:8084/manager/text/deploy?path=/myapp&update=true"'
+	    
 					        } else {
                                                         echo 'skipping the stage ${env.STAGE_NAME}.............................!'	    
 					}	} catch (err) {
